--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.4.1/mocha.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
-    <script src="http://sinonjs.org/releases/sinon-2.0.0-pre.4.js"></script>
+    <script src="https://sinonjs.org/releases/sinon-2.0.0-pre.4.js"></script>
     <script src="//cdn.rawgit.com/rstacruz/mocha-clean/v0.4.0/index.js"></script>
 </head>
 
 <body>
     <div id="mocha"></div>
-    <script src="index.js"></script>
     <script src="index.spec.js"></script>
+    <script src="index.js"></script>
     <script>mocha.run();</script>
 </body>
 
